fix overflow in firefox

--- a/client/assets/styles/scss/server/server-sidebar.scss
+++ b/client/assets/styles/scss/server/server-sidebar.scss
@@ -50,9 +50,10 @@
 .sidebar-section {
   border-bottom: 1px solid $gray-lighter;
   display: flex;
-  flex: 1 0 54px;
+  flex: 1 1 54px;
   flex-direction: column;
   max-height: 100%;
+  min-height: 54px;
   transition: max-height .15s ease-in-out;
 
   &.closed {
